Archive2/b0/d58faf917c9898/output
main.cpp:4:14: error: field has incomplete type 'incomplete'
struct A { T d; };
             ^
main.cpp:11:7: note: in instantiation of template class 'A<incomplete>' requested here
    a = b;
      ^
main.cpp:1:8: note: forward declaration of 'incomplete'
struct incomplete;
       ^
1 error generated.
